Fixed style of cursor so that its visibility was initially inline, to make the cursor not lag onload.

--- a/style.css
+++ b/style.css
@@ -56,6 +56,5 @@ body {
 }
 
 #cursor {
-	visibility: visible;
 	margin: 0 -3px;
 }
